--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\""
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.3.0",
+    "@mui/material": "^6.3.0",
     "@types/node": "^22.9.1",
     "@types/react-router-dom": "^5.3.3",
     "lucide-react": "^0.460.0",
